# povtore

./: .gitignore  README.md
CMakeDemo/: CMakeLists.txt  main.cpp  program.cpp  program.hpp
CMakeFigure/: CMakeLists.txt  Equilateral_triangle.hpp  Isosceles_triangle.cpp  Isosceles_triangle.hpp  Parallelogram.cpp  Rectangle.cpp  Rectangle.hpp  Square.cpp  Triangle.cpp
Exception/: Exception.sln  Exception.vcxproj  Exception.vcxproj.filters  Func_all.cpp  Func_all.h  exc.cpp  exc.h  main.cpp
Multi_file/: Counter.cpp  Counter.h  Multi_file.sln  Multi_file.vcxproj  Multi_file.vcxproj.filters  creates_fun.cpp  creates_fun.hpp  main.cpp
OOP_nas_poli/: Equilateral_triangle.cpp  Equilateral_triangle.hpp  Figure.cpp  Figure.hpp  Isosceles_triangle.cpp  Isosceles_triangle.hpp  OOP_nas_poli.sln  OOP_nas_poli.vcxproj  OOP_nas_poli.vcxproj.filters  Parallelogram.cpp  Parallelogram.hpp  Quadrangle.cpp  Quadrangle.hpp  Rectangle.cpp  Rectangle.hpp  Rhomb.cpp  Rhomb.hpp  Right_triangle.cpp  Right_triangle.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  exc.cpp  exc.h  main.cpp
Oper_Overloading/: Fraction.cpp  Fraction.h  Oper_Overloading.sln  Oper_Overloading.vcxproj  main.cpp
Preproc_Macros/: Func.cpp  Func.hpp  Preproc_Macros.sln  Preproc_Macros.vcxproj  Preproc_Macros.vcxproj.filters  main.cpp
