cmake_minimum_required(VERSION 3.22.0)
project(my_second_cmake_project)
add_executable(CMake_Figure main.cpp Equilateral_triangle.cpp Figure.cpp Isosceles_triangle.cpp Parallelogram.cpp Quadrangle.cpp Rectangle.cpp Rhomb.cpp
 Right_triangle.cpp Square.cpp Triangle.cpp 
 Equilateral_triangle.hpp Figure.hpp Isosceles_triangle.hpp Parallelogram.hpp Quadrangle.hpp Rectangle.hpp Rhomb.hpp Right_triangle.hpp Square.cpp Triangle.hpp)